css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    color: white;
    font-family: "Roboto", sans-serif;
}

/* layout */
main{
    height: calc(100vh - 100px);
    display: flex;
}

header{
    position: sticky;
    top: 0;
    height: 100px;
    background-color: #080B12;
    z-index: 1;
}

footer{
    height: 100px;
    background-color: #222;
    padding: 20px 10px;
    position: relative;
    z-index: 1;
}

.sidebar{
    width: 250px;
    height: 100%;
    background-color: #000;
    /* z-index: -1; */
}

.content{
    width: calc(100% - 250px);
    background-color: #141922;
    overflow-y: auto;
}

.container{
    padding: 20px;
}

/* tag styles */
ul{
    list-style-type: none;
}

h1{
    font-size: 70px;
    font-weight: 900;
}

h2{
    font-size: 30px;
    font-weight: 900;
    padding-top: 35px;
}

p{
    padding-top: 10px;
}

a{
    text-decoration: inherit;
    color: inherit;
}

/* utilities */
.d-flex{
    display: flex;
}

.direction-column{
    flex-direction: column;
}

.justify-center{
    justify-content: center;
}

.justify-end{
    justify-content: flex-end;
}

.justify-between{
    justify-content: space-between;
}

.justify-around{
    justify-content: space-around;
}

.align-center{
    align-content: center;
    align-items: center;
}


.flex-wrap{
    flex-wrap: wrap;
}

.bold{
    font-weight: bold;
}

.inline-block{
    display: inline-block;
}

/* Elements */
.button{
    display: inline-block;
    padding: 10px 30px;
    border: 2px solid white;
    border-radius: 21px;
}

/***********/
/* SIDEBAR */
/***********/
/* logo */
#logo{
    height: 100px;
    padding: 20px;
}

#small-logo{
    display: none;
    height: 75px;
    padding: 20px;
}

#logo img, #small-logo img{
    height: 100%;
}

/* main list */
#main-sidelist{
    padding: 10px 0;
    color: #6C6F74;
    font-weight: 600;
}

#main-sidelist li{
    padding: 5px 20px;
}

#main-sidelist li a{
    display: flex;
    align-content: center;
    align-items: center;
}

#main-sidelist > li > a > div{
    display: inline-block;
    height: 30px;
}
#main-sidelist > li > a > div img{
    height: 100%;
    margin-right: 5px;
}

.main-list-label{
    padding: 5px 0;
}

.green-line{
    border-left: 3px solid #ADFF2F;
}

/* playlist */
#side-playlist{
    padding: 10px 20px;
    color: #6C6F74;
    font-weight: 600;
}

.sidebar-section-title{
    font-weight: bold;
}

#side-playlist > a{
    display: flex;
    align-content: center;
    align-items: center;
    padding: 20px 0;
}

.create-playlist{
    height: 40px;
    width: 40px;
    background-color: #A3A3A3;
    position: relative;
    display: inline-block;
    margin-right: 5px;
}
.plus{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 30px;
    color: #000;
    font-weight: bold;
}

#playlist-list li{
    padding-bottom: 20px;
}

/* bottom half */
#bottom-sidebar{
    padding: 20px;
    color: #6C6F74;
    font-weight: 600;
}

#download{
    height: 40px;
    display: flex;
    align-content: center;
    align-items: center;
}
#user-profile{
    height: 50px;
    display: flex;
    align-content: center;
    align-items: center;
    color: white;
}

.download-icon{
    height: 20px;
    margin-right: 10px;
}
.pfp{
    height: 30px;
    width: 30px;
    background-color: #A3A3A3;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    margin-right: 10px;
}
.download-icon img{
    height: 100%
}
.pfp img{
    height: 100%;
    border-radius: 50%;
}

/**********/
/* HEADER */
/**********/
header .button{
    margin: 0 10px;
}

/***********/
/* CONTENT */
/***********/
/* menu */
.menu ul{
    max-width: 800px;
}
.menu ul li{
    margin: 10px 20px;
}

.green-underline{
    text-decoration: underline;
    text-underline-offset: 6px;
    text-decoration-thickness: 2px;
    text-decoration-color: #ADFF2F;
}

.default-hide{
    text-decoration: none;
}

/* card */
.card{
    width: 16%;
    padding-right: 20px;
}
.image, .artist{
    position: relative;
    width: 100%;
}
.album-cover, .album-cover img, .artist-cover, .artist-cover img{
    width: 100%;
}
.album-hover, .artist-hover{
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;

    /* Animazioni hover toccare qua */
    opacity: 0;

}
.album-hover i, .artist-hover i{
    font-size: 70px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.album-title{
    font-weight: 900;
    font-size: 20px;
    text-align: center;
    padding: 20px 0 10px 0;
}
.subtitle{
    font-weight: bold;
    color: #6C6F74;
    text-align: center;
    padding-bottom: 10px;
}
.artist-cover img, .artist-hover{
    border-radius: 50%;
}

#recently-played, #created-for, #artists{
    padding-top: 30px;
}

/**********/
/* FOOTER */
/**********/
.footer-side{
    width: 250px;
}
.footer-player{
    width: calc(100vw - 500px);
    max-width: 990px;
}

/* Footer song info */
.playing-cover{
    height: 50px;
    width: 50px;
}
.playing-cover img{
    width: 100%;
}
.playing-info{
    padding: 0px 10px;
}
.playing-save{
    width: 20%;
}

/* Footer playing */
.playing-controls{
    width: 40%;
    min-width: 200px;
}

.play{
    font-size: 30px;
}

.playing-progress{
    width: 100%;
    padding: 10px 0;
}
.time-stamp{
    width: 5%;
    min-width: 50px;
    text-align: center;
    font-size: 12px;
}
.progress-bar{
    background-color: #5A5A5A;
    height: 4px;
    width: 90%;
    border-radius: 2px;
    position: relative;
}
.active-bar{
    width: 20%;
    background-color: #C1C1C1;
    border-radius: 2px;
}

.white-dot{
    height: 10px;
    width: 10px;
    border-radius: 50%;
    background-color: white;
    position: absolute;
    left: 20%;
    top: -2px;
    display: none;
}

/* Footer volume */
.volume-bar{
    background-color: #5A5A5A;
    height: 4px;
    width: 50%;
    border-radius: 2px;
    position: relative;
}
/* ... */

